--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ a {
 }
 
 .lista {
-    padding-left: 44.5vw;
+    padding-left: 45%;
 }
 
 .foot-text .lista {
@@ -203,7 +203,7 @@ a {
 }
 
 hr {
-    width: 200px;
+    width: 250px;
     margin: 2rem auto;
 }
 
