--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,12 +99,11 @@ header {
 .blocco1 {
     text-align: center;
     display: inline-block;
-    border: 2px solid black;
+    border: 1px solid #dee1e3;
     box-sizing: border-box;
     width: 600px;
     min-height: 450px;
-    margin-right: 3rem;
-    border-radius: 5px;
+    border-radius: 2px;
     vertical-align: top;
 }
 
@@ -123,13 +122,11 @@ header {
 .blocco2 {
     text-align: center;
     display: inline-block;
-    border: 2px solid black;
+    border: 1px solid #dee1e3;
     box-sizing: border-box;
     width: 600px;
     min-height: 450px;
-    margin-left: 3rem;
-    margin-right: 3rem;
-    border-radius: 5px;
+    border-radius: 2px;
     vertical-align: top;
 }
 
@@ -150,12 +147,11 @@ header {
 .blocco3 {
     text-align: center;
     display: inline-block; 
-    border: 2px solid black;
+    border: 1px solid #dee1e3;
     box-sizing: border-box;
     width: 600px;
     min-height: 450px;
-    margin-left: 3rem;
-    border-radius: 5px;
+    border-radius: 2px;
     vertical-align: top;
 }
 
@@ -196,6 +192,7 @@ a {
 
 .lista {
     padding-left: 45%;
+    padding-right: 44%;
 }
 
 .foot-text .lista {
