--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ h1, h4 {
 }
 
 .img-logo {
-    width: 15%;
+    width: 10%;
     padding: 1.8rem;
 }
 
@@ -25,7 +25,7 @@ header {
 
 
 .background {
-    height: 65vh;
+    height: 100%;
     background-image: url("/assets/img/banner.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -39,7 +39,7 @@ header {
 }
 
 .scritte {
-    padding-top: 25vh;
+   padding: 11rem;
 }
 
 .bottone {
@@ -67,22 +67,23 @@ header {
 
 .paragrafo1 {
     margin-left: 3rem;
+    margin-top: 2rem;
     vertical-align: top;
 }
 
 .paragrafo1 p, .paragrafo1 h4 {
     text-align: start;
-    line-height: 3em;
+    line-height: 2.5em;
 }
 
 .article2 {
     text-align: center;
     padding: 80px;
-    background-color: red;
+    background-color: #E22D0E;
     color: white;
 }
 
-.article2 p {
+.article2 .corsivo {
     font-style: italic;
     color: white;
 }
@@ -90,6 +91,16 @@ header {
 .article2 h4 {
     color: white;
 }
+
+.article2 .citazione {
+    margin-top: 3rem;
+    font-size: 14px;
+}
+
+.article2 .citazione2 {
+    font-size: 10px;
+}
+
 
 .article3 {
     margin: 3rem 8rem;
@@ -190,13 +201,20 @@ a {
     color: white;
 }
 
-.lista {
-    width: 50%;
-    padding-left: 46%;
-    padding-right: 46%;
+/*.lista {
+    text-align: center;
+    margin: 0 auto;
 }
 
-.foot-text .lista {
+.foot-text .lista p {
+    text-align: start;
+}*/
+
+.indirizzo {
+    margin: 0 auto;
+}
+
+.indirizzo p {
     text-align: start;
 }
 
@@ -205,13 +223,12 @@ hr {
     margin: 2rem auto;
 }
 
-ion-icon {
+ion-icon, .material-symbols-outlined {
     background-color: white;
     color: #25A2C3;
+    margin-right: 0.8em;
 }
 
 .material-symbols-outlined {
     font-size: 14px;
-    background-color: white;
-    color: #25A2C3;
 }
