--- a/Progetto_desktop/assets/css/style.css
+++ b/Progetto_desktop/assets/css/style.css
@@ -26,7 +26,7 @@ header {
 
 .background {
     height: 100%;
-    background-image: url("/assets/img/banner.jpg");
+    background-image: url("/Progetto_desktop/assets/img/banner.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
